Improvements of Css style in time control

--- a/main/css/medical/default.css
+++ b/main/css/medical/default.css
@@ -2363,11 +2363,11 @@ span.radio {
 }
 /*Exercice timer*/
 #square{
-  padding:15px;
+  padding:5px;
   background-color:#EEEEEE;
   border:1px solid #CCCCCC;
-  margin-right : 25px;
-  width : 190px;margin-bottom:10px;
+  margin-right : 24x;
+  width : 155px;margin-bottom:5px;
 }
 #wrapper-clock{
   width:100%;
@@ -2376,7 +2376,7 @@ span.radio {
 .count_down{
   padding: 3px;
   font-family:Georgia, "Times New Roman", Times, serif;
-  font-size:38px;
+  font-size:30px;
   font-weight:bold;
   color:#222;
 }
