--- a/main/css/baby_orange/default.css
+++ b/main/css/baby_orange/default.css
@@ -478,7 +478,6 @@ form span.form_error {
 	border-bottom:1px solid #4171b5;
 	border-top:1px solid #4171b5;
 	background-color:#efefef;
-	height:100%;
 	padding:2px;
 	margin-bottom: 5px;
 	vertical-align:middle;
@@ -491,6 +490,14 @@ form span.form_error {
 	padding-right:12px;
 	text-align:center;
 }
+.content_table {
+	padding:2px;
+	margin-bottom: 5px;
+	vertical-align:middle;
+	float:left;
+	width:100%;
+}
+
 .actions img {
 	vertical-align:middle;
 }
@@ -2034,7 +2041,7 @@ button.upload {
 }
 
 .icon_image_content {
-	width:70px;
+	width:80px;
 	cursor:hand;
 	height:8em;
 	text-align: center;
@@ -2046,6 +2053,9 @@ button.upload {
 .question_menu {
 	list-style:none;
 	float:left;
+	padding:0px;
+	margin:-2px;
+	min-height:100px;
 }
 .question_menu li {
 	float:left;
