--- a/main/css/cosmic_campus/default.css
+++ b/main/css/cosmic_campus/default.css
@@ -526,7 +526,13 @@ form span.form_error {
 	border-bottom:1px solid #7171b7;
 	border-top:1px solid #7171b7;
 	background-color:#efefef;
-	height:100%;
+	padding:2px;
+	margin-bottom: 5px;
+	vertical-align:middle;
+	float:left;
+	width:100%;
+}
+.content_table {
 	padding:2px;
 	margin-bottom: 5px;
 	vertical-align:middle;
@@ -2071,7 +2077,7 @@ button.back {
 	background-image:url(images/button_back.gif);
 }
 .icon_image_content {
-	width:70px;
+	width:80px;
 	cursor:hand;
 	height:8em;
 	text-align: center;
@@ -2083,6 +2089,9 @@ button.back {
 .question_menu {
 	list-style:none;
 	float:left;
+	padding:0px;
+	margin:-2px;
+	min-height:100px;
 }
 .question_menu li {
 	float:left;
