UI improvements - user groups see #5508

--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -2616,6 +2616,8 @@ input.arrowl {
 
 
 /* UI improvements */
+
+
 * {
 	outline :none;
 }
@@ -2640,4 +2642,14 @@ input, select, textarea {
 
 input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	background-image:url(images/shadow.gif);
+}
+
+
+
+.independent_course_item a {
+	font-size:120%;
+}
+
+.session_course_item a {
+	font-size:120%;
 }
