--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -2186,7 +2186,7 @@ div.comments {
 	background:#FFF;
 	border:1px dotted #ccc;
 	padding: 0px 10px 0 10px;
-	width:50%;
+/*	width:50%; */
 	position:relative;
 }
 .message-content .message-delete {
@@ -2679,16 +2679,23 @@ a.unread {
 
 #inbox-wrapper {width:100%;}
 
-#inbox {width:90%;float:left;}
+#inbox {width:80%;float:right;}
+
+#inbox-menu  {
+	width:150px;
+	float:left;
+}
 
 #inbox-menu ul {
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
 	margin:0;
-	padding:0;
-	width:10%;
-	float:left;
+	padding:0px;
+}
+#inbox-menu ul li{
+
+	padding:2px 0px;
 }
 
 #message-reply-link {
@@ -2771,8 +2778,6 @@ a.unread {
 }
 
 .actions {
-
-
 	background:#efefef;
 	border:1px solid #ccc;	
 	padding:2px;
@@ -2791,17 +2796,77 @@ a.unread {
 }
 
 #group_description {
-	margin: 5px 0px 5px 0px;
+	margin: 10px 0px 10px 0px;
 }
 
 #group_privacy {
-	margin: 5px 0px 5px 0px;
+	margin: 10px 0px 10px 0px;
 }
 
-#group_permissions ul {
+#group_permissions {
+	-moz-background-clip:border;
+	-moz-background-inline-policy:continuous;
+	-moz-background-origin:padding;
+	-moz-border-radius-bottomleft:8px;
+	-moz-border-radius-bottomright:8px;
+	-moz-border-radius-topleft:8px;
+	-moz-border-radius-topright:8px;
+	background:#EEE none repeat scroll 0 0;
+
+	margin: 20px 0px 20px 0px;
+}
+
+#group_permissions ul {	
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
 	margin:0;
 	padding:0;
+}
+
+#group_permissions ul li {
+	margin: 10px 0px 10px 5px;
+}
+
+/* Groups boxes */
+.groups_grid_container { width:100%;}
+.groups_grid_item {
+	border:1px dotted #CCCCCC;
+	float:left;
+	height:85px;
+	margin:8px;
+	padding:5px;
+	width:300px;
+}
+.groups_grid_element_0 { width:100px; float:left; text-align:center; margin-bottom:5px;}
+.groups_grid_element_1 { width:100px; float:left; text-align:left;margin-bottom:5px;}
+.groups_grid_element_2 { width:150px; float:left;}
+
+
+/* User boxes */
+.search_users_grid_container { width:100%;}
+.search_users_grid_item { width:400px;  height: 90px;  border:1px dotted #ccc; float:left; padding:5px; margin:8px;}
+.search_users_grid_element_0 { width:100px; float:left; text-align:center; margin-bottom:5px;}
+.search_users_grid_element_1 { width:100px; float:left; text-align:center;margin-bottom:5px;}
+.search_users_grid_element_2 { width:150px; float:left;}
+
+.search_users_grid_selectbox { width:50%; float:left;}
+.search_users_grid_title 	{ width:30%; float:left;}
+.search_users_grid_nav 		{ float:right;}
+
+#menu {
+	-moz-border-radius: 10px; border: 1px solid #e1e1e0;
+	-webkit-border-radius: 10px; border: 1px solid #e1e1e0;
+	-opera-border-radius: 10px; border: 1px solid #e1e1e0;
+	width:240px;
+	margin-top:40px;
+	margin-right:10px;
+	margin-bottom:40px;
+	padding-left:10px;
+	padding-right:20px;
+	padding-top:5px;
+	float: right;
+	min-height: 150px;
+	padding-bottom:30px;	
+
 }
