--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -560,8 +560,7 @@ margin-top:0;
 	padding-top:30px;
 	float: right;
 	min-height: 150px;
-	padding-bottom:30px;
-	
+	padding-bottom:30px;	
 
 }
 
@@ -574,9 +573,8 @@ margin-top:0;
 	font-weight: bold;
 	padding-left: 12px;
 }
-.menusection {
-	
-	margin: 24px 6px 0 6px;
+.menusection {	
+	margin: 0px 5px 0 6px;
 	padding-left: 10px;
 	width: auto;
 }
@@ -595,7 +593,7 @@ margin-top:0;
 
 .menulist li{
 	float:left;
-	margin-left:10px;
+	/* margin-left:10px; */
 	margin-bottom:10px;
 }
 #centerwrap {
@@ -2424,13 +2422,14 @@ padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
 	margin-left:20px;
 }
 /* styles from the my.profile.php file */
+
 .message-content {
 	float:right;
-	margin:20px auto;
-	background:#E5EDF9;
-	border:2px solid #E5EDF9;
-	padding:10px;
-	width:200px;
+	margin:0px 10px;
+	background:#FFF;
+	border:1px dotted #ccc;
+	padding: 0px 10px 0 10px;
+/*	width:50%; */
 	position:relative;
 }
 .message-content .message-delete {
@@ -2452,7 +2451,7 @@ padding-top: 0px;	padding-right: 0px;	padding-bottom: 0px;	padding-left: 0px;}
 }
 .message-title {
 	color:#ff0000;
-	font-size:15px;
+	font-size:12px;
 }
 .message-body {
 	font-size:11px;
@@ -3068,9 +3067,6 @@ button.arrowl {
 
 
 
-/* UI improvements for 1.8.6.2 this should be move to the chamilo theme and reproduce in all CSS*/
-
-
 * {
 	outline :none;
 }
@@ -3121,16 +3117,23 @@ a.unread {
 
 #inbox-wrapper {width:100%;}
 
-#inbox {width:90%;float:left;}
+#inbox {width:80%;float:right;}
+
+#inbox-menu  {
+	width:150px;
+	float:left;
+}
 
 #inbox-menu ul {
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
 	margin:0;
-	padding:0;
-	width:10%;
-	float:left;
+	padding:0px;
+}
+#inbox-menu ul li{
+
+	padding:2px 0px;
 }
 
 #message-reply-link {
@@ -3171,7 +3174,7 @@ a.unread {
 	-moz-border-radius-bottomright:8px;
 	-moz-border-radius-topleft:8px;
 	-moz-border-radius-topright:8px;
-	background:#eee none repeat scroll 0 0;
+	background:#F5F5F5 none repeat scroll 0 0;
 	margin:0 0 5px;
 	padding:10px;
 }
@@ -3184,7 +3187,7 @@ a.unread {
 	-moz-border-radius-bottomright:8px;
 	-moz-border-radius-topleft:8px;
 	-moz-border-radius-topright:8px;
-	background:#ccc none repeat scroll 0 0;
+	background:#E6EEFB  none repeat scroll 0 0;
 	margin:0 0 5px;
 	padding:10px;
 
@@ -3203,7 +3206,8 @@ a.unread {
 }
 
 .message-group-content {
-	line-height:150%
+	line-height:150%;
+	margin: 5px 0px 8px 0px;
 }
 
 .view-message-content {
@@ -3212,8 +3216,6 @@ a.unread {
 }
 
 .actions {
-
-
 	background:#efefef;
 	border:1px solid #ccc;	
 	padding:2px;
@@ -3221,9 +3223,7 @@ a.unread {
 	vertical-align:middle;
 }
 
-.actions-title {
-
-	
+.actions-title {	
 	background:#efefef;
 	border:1px solid #ccc;
 	padding:4px;
@@ -3233,3 +3233,61 @@ a.unread {
 	vertical-align:middle;
 }
 
+#group_description {
+	margin: 10px 0px 10px 0px;
+}
+
+#group_privacy {
+	margin: 10px 0px 10px 0px;
+}
+
+#group_permissions {
+	-moz-background-clip:border;
+	-moz-background-inline-policy:continuous;
+	-moz-background-origin:padding;
+	-moz-border-radius-bottomleft:8px;
+	-moz-border-radius-bottomright:8px;
+	-moz-border-radius-topleft:8px;
+	-moz-border-radius-topright:8px;
+	background:#EEE none repeat scroll 0 0;
+
+	margin: 20px 0px 20px 0px;
+}
+
+#group_permissions ul {	
+	list-style-image:none;
+	list-style-position:outside;
+	list-style-type:none;
+	margin:0;
+	padding:0;
+}
+
+#group_permissions ul li {
+	margin: 10px 0px 10px 5px;
+}
+
+/* Groups boxes */
+.groups_grid_container { width:100%;}
+.groups_grid_item {
+	border:1px dotted #CCCCCC;
+	float:left;
+	height:85px;
+	margin:8px;
+	padding:5px;
+	width:300px;
+}
+.groups_grid_element_0 { width:100px; float:left; text-align:center; margin-bottom:5px;}
+.groups_grid_element_1 { width:100px; float:left; text-align:left;margin-bottom:5px;}
+.groups_grid_element_2 { width:150px; float:left;}
+
+
+/* User boxes */
+.search_users_grid_container { width:100%;}
+.search_users_grid_item { width:400px;  height: 90px;  border:1px dotted #ccc; float:left; padding:5px; margin:8px;}
+.search_users_grid_element_0 { width:100px; float:left; text-align:center; margin-bottom:5px;}
+.search_users_grid_element_1 { width:100px; float:left; text-align:center;margin-bottom:5px;}
+.search_users_grid_element_2 { width:150px; float:left;}
+
+.search_users_grid_selectbox { width:50%; float:left;}
+.search_users_grid_title 	{ width:30%; float:left;}
+.search_users_grid_nav 		{ float:right;}
