User group minor fixes see #190

--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -389,7 +389,7 @@ default.css (línea 362)
 	width: auto;
 	margin: 24px 6px 0 6px;
 	padding-left: 10px;
-	border: 1px solid #636363;
+	border: 1px solid #ccc;
 	background-color: #FFF;
 }
 .menusectioncaption {
